# ChromaPrint3D

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.build  README.md  bench_blocks.ppm  version-manifest.example.json
.cursor/: hooks.json
.cursor/hooks/: check-docs-sync.sh  format-frontend.sh  protect-secrets.sh
.cursor/rules/: code-structure-and-utility-reuse.mdc  cpp-coding-standards.mdc  cpp-formatting.mdc  cross-platform-cpp.mdc  end-to-end-change-checklist.mdc  frontend-architecture.mdc  frontend-i18n.mdc  frontend-layer-boundary.mdc  git-branch-pr-policy.mdc  release-changelog.mdc  reply-in-chinese.mdc  sync-docs.mdc
.cursor/skills/publish-announcement/: SKILL.md
.cursor/skills/release-version/: SKILL.md
.github/: pull_request_template.md
.github/vcpkg-triplets/: x64-windows-release.cmake
.github/workflows/: ci.yml  release-backend-linux.yml  release-backend-macos.yml  release-backend-windows.yml  release-docker.yml  release-electron.yml  release-frontend.yml  release-publish.yml  release-tag.yml  release.yml
apps/: CMakeLists.txt  README.md  async_task_manager.h  chromaprint3d_server.cpp  evaluate_svg.cpp  gen_test_preset_3mf.cpp  matting_task_manager.h  raster_to_3mf.cpp  raster_to_svg.cpp  svg_to_3mf.cpp  task_manager.h  vectorize_task_manager.h
apps/server/: board_geometry_cache.h  color_db_cache.h  http_utils.h  recipe_store.h  request_builder.h  routes_colordb.h  routes_convert.h  routes_convert_vector.h  routes_health.h  routes_matting.h  routes_session.h  routes_vectorize.h  server_context.h  server_options.h
core/: CMakeLists.txt  README.en.md  README.md
core/include/chromaprint3d/: calib.h  chromaprint3d.h  color.h  color_db.h  common.h  encoding.h  error.h  export.h  export_3mf.h  forward_color_model.h  image_io.h  kdtree.h  matting.h  matting_postprocess.h  memory_utils.h  mesh.h  model_package.h  pipeline.h  print_profile.h  raster_proc.h  raster_region_map.h  recipe_alternatives.h  recipe_map.h  shape_width_analyzer.h  slicer_preset.h  vec2.h  vec3.h  vector_image.h  vector_mesh.h  vector_preview.h  vector_proc.h  vector_recipe_map.h  vectorizer.h  version.h.in  voxel.h
core/src/calib/: calib.cpp  loc.cpp
core/src/color_db/: color_db.cpp
core/tests/: CMakeLists.txt  test_3mf_writer.cpp  test_color.cpp  test_color_db.cpp  test_kdtree.cpp  test_layer_previews.cpp  test_matting.cpp  test_memory_utils.cpp  test_mesh.cpp  test_raster_match.cpp  test_recipe_convert.cpp  test_slicer_preset.cpp  test_vector_match.cpp  test_vector_mesh.cpp  test_vectorizer.cpp  test_vectorizer_potrace.cpp  test_voxel.cpp
data/models/: models.json
data/presets/: bambu_p2s_0.08mm.json  bambu_p2s_0.08mm_n02_facedown.json  bambu_p2s_0.08mm_n02_faceup.json  bambu_p2s_0.08mm_n04_facedown.json  bambu_p2s_0.08mm_n04_faceup.json  filaments.json
data/recipes/: 8color_boards.json
docs/: build.md  deployment.md  development.md  frontend-ui-theme-manual.md
docs/agents/: README.md
eval/: CMakeLists.txt
eval/include/chromaprint3d/: vectorize_eval.h
eval/src/: benchmark.cpp  benchmark.h  edge_metrics.cpp  edge_metrics.h  path_metrics.cpp  path_metrics.h  pixel_metrics.cpp  pixel_metrics.h  svg_geometry.cpp  svg_geometry.h  svg_rasterizer.cpp  svg_rasterizer.h  vectorize_eval.cpp
eval/tests/: CMakeLists.txt  test_vectorize_eval.cpp
infer/: CMakeLists.txt
infer/include/chromaprint3d/infer/: backend.h  data_type.h  device.h  engine.h  error.h  infer.h  model_info.h  preprocess.h  session.h  tensor.h
infer/src/: data_type.cpp  device.cpp  engine.cpp  preprocess.cpp  tensor.cpp
infer/src/backends/onnxruntime/: ort_backend.cpp  ort_backend.h  ort_session.cpp  ort_session.h
infer/tests/: CMakeLists.txt  test_preprocess.cpp  test_tensor.cpp
modeling/: README.md
modeling/eval/: analyze_color_gamut.py
modeling/pipeline/: gen_8color_board_recipes.py  step3_fit_stage_b.py  step4_select_recipes.py  step5_build_model_package.py
modeling/tools/: dump_model_package.py
scripts/: announce.sh  deploy_split-preview.env.example  deploy_split.env.example  deploy_split.sh  download_models.py  download_models.sh  release-preview.sh  release.sh  upload_models.py
scripts/ci/: package_backend_linux.sh  package_backend_macos.sh  package_backend_windows.ps1
tools/: npy_to_colordb.py
web/: package.json
web/backend/: CMakeLists.txt  async_task_manager.h  chromaprint3d_server.cpp  matting_task_manager.h  server_main.cpp  vectorize_task_manager.h
web/backend/server/: color_db_cache.h  recipe_store.h  routes_calibration.h  routes_colordb.h  routes_vectorize.h  session.h
web/backend/src/application/: announcement_service.cpp  announcement_service.h  calibration_service.cpp  calibration_service.h  color_db_service.cpp  color_db_service.h  colordb_resolution.cpp  colordb_resolution.h  convert_service.cpp  convert_service.h  json_serialization.cpp  json_serialization.h  matting_vectorize_service.cpp  matting_vectorize_service.h  recipe_editor_service.cpp  recipe_editor_service.h  request_parsing.cpp  request_parsing.h  server_facade.cpp  server_facade.h  service_result.h  task_service.cpp  task_service.h
web/backend/src/config/: server_config.cpp  server_config.h
web/backend/src/infrastructure/: board_runtime_cache.cpp  board_runtime_cache.h  color_db_bytes.h  data_repository.cpp  data_repository.h  random_utils.h  session_store.cpp  session_store.h  spillable_artifact.cpp  spillable_artifact.h  task_runtime.cpp  task_runtime.h
web/backend/src/presentation/: announcement_auth_advice.cpp  announcement_auth_advice.h  api_v1_controller.cpp  api_v1_controller.h  backend_runtime.cpp  backend_runtime.h  cors_advice.cpp  cors_advice.h
web/backend/tests/: CMakeLists.txt  test_announcement_service.cpp  test_server_facade.cpp  test_task_runtime.cpp
web/electron/: README.md  electron-builder.yml  package-lock.json  package.json
web/frontend/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.vue  api.ts  types.ts
(+280 files in other folders)
