set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(gen_calibration_board gen_calibration_board.cpp)
add_executable(raster_to_3mf raster_to_3mf.cpp)
add_executable(build_colordb build_colordb.cpp)
add_executable(gen_stage gen_stage.cpp)
add_executable(gen_representative_board gen_representative_board.cpp)
add_executable(svg_to_3mf svg_to_3mf.cpp)
add_executable(gen_test_preset_3mf gen_test_preset_3mf.cpp)

target_link_libraries(gen_calibration_board PRIVATE ChromaPrint3D::core)
target_link_libraries(raster_to_3mf PRIVATE ChromaPrint3D::core)
target_link_libraries(build_colordb PRIVATE ChromaPrint3D::core)
target_link_libraries(gen_stage PRIVATE ChromaPrint3D::core)
target_link_libraries(gen_representative_board PRIVATE ChromaPrint3D::core)
target_link_libraries(svg_to_3mf PRIVATE ChromaPrint3D::core)
target_link_libraries(gen_test_preset_3mf PRIVATE ChromaPrint3D::core)
